<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentTime"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeFragment">

    <EditText
        android:id="@+id/etCodTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/etCidadeTime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etCodTime"
        app:layout_constraintTop_toBottomOf="@+id/etCodTime" />

    <Button
        android:id="@+id/btnListarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/listar"
        app:layout_constraintStart_toStartOf="@+id/btnAlterarTime"
        app:layout_constraintTop_toBottomOf="@+id/btnAlterarTime" />

    <Button
        android:id="@+id/btnExcluirTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="@+id/btnInserirTime"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirTime" />

    <Button
        android:id="@+id/btnInserirTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCidadeTime" />

    <Button
        android:id="@+id/btnAlterarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:text="@string/alterar"
        app:layout_constraintEnd_toEndOf="@+id/etCidadeTime"
        app:layout_constraintTop_toBottomOf="@+id/etCidadeTime" />

    <EditText
        android:id="@+id/etCidadeTime"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/cidade"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeTime" />

    <Button
        android:id="@+id/btnBuscarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:text="@string/buscar"
        app:layout_constraintBaseline_toBaselineOf="@+id/etCodTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodTime" />

     <TextView
        android:id="@+id/tvListarTime"
        android:layout_width="401dp"
        android:layout_height="146dp"
        android:layout_marginBottom="4dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTituloTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="20dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etCodTime"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>