<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentJogador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JogadorFragment">


    <EditText
        android:id="@+id/etIDJogador"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarJogador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAlturaJogador"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="38dp"
        android:ems="10"
        android:hint="@string/altura"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/etPesoJogador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascJogador" />

    <Button
        android:id="@+id/btnBuscarJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:text="@string/buscar"
        app:layout_constraintBaseline_toBaselineOf="@+id/etIDJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etIDJogador" />

    <EditText
        android:id="@+id/etPesoJogador"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="92dp"
        android:ems="10"
        android:hint="@string/peso"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etAlturaJogador"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascJogador" />

    <EditText
        android:id="@+id/etDataNascJogador"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/data"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeJogador" />

    <Spinner
        android:id="@+id/spTimeJog"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPesoJogador" />

    <Button
        android:id="@+id/btnInserirJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="@+id/spTimeJog"
        app:layout_constraintTop_toBottomOf="@+id/spTimeJog" />

    <Button
        android:id="@+id/btnListarJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="@+id/btnAlterarJogador"
        app:layout_constraintTop_toBottomOf="@+id/btnAlterarJogador" />

    <Button
        android:id="@+id/btnExcluirJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="@+id/btnInserirJogador"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirJogador" />

    <Button
        android:id="@+id/btnAlterarJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:text="@string/alterar"
        app:layout_constraintEnd_toEndOf="@+id/spTimeJog"
        app:layout_constraintTop_toBottomOf="@+id/spTimeJog" />

    <EditText
        android:id="@+id/etNomeJogador"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/spTimeJog"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etIDJogador"
        app:layout_constraintTop_toBottomOf="@+id/etIDJogador" />


    <TextView
        android:id="@+id/tvListarJogador"
        android:layout_width="410dp"
        android:layout_height="124dp"
        android:layout_marginBottom="4dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTituloJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/jogador"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>